fixed overflow of notification diplay in Plant.js, tying some ffont for .plant-title

--- a/src/components/views/Plant.css
+++ b/src/components/views/Plant.css
@@ -8,10 +8,13 @@
 
 }
 .plant-name {
+    font-family: 'Italianno', cursive;
     align-self: center;
 }
 
 .notif-box {
+    display: flex;
+    flex-direction: column;
     margin: 5%;
     padding: 3%;
     background-color: white;
@@ -21,6 +24,10 @@
 .notif-title {
     margin-top: 0;
     font-size: 1rem;
+}
+
+.notif-list-item {
+    overflow-wrap: break-word;
 }
 
 .btn-box {
